[tool.poetry]
authors = ["Band Protocol"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
]
description = "Python library for BandChain"
documentation = "https://docs.bandchain.org/client-library/pyband/getting-started.html"
homepage = "https://bandprotocol.com/"
keywords = ["BAND", "BLOCKCHAIN", "ORACLE"]
license = "MIT"
name = "pyband"
readme = "README.md"
repository = "https://github.com/bandprotocol/pyband"
version = "0.3.5"

[tool.poetry.dependencies]
bech32 = "1.2.0"
betterproto = "2.0.0b5"
bip32 = "0.0.8"
ecdsa = "0.15"
grpclib = "0.4.3"
ledgerblue = "^0.1.45"
mnemonic = "0.19"
python = "^3.7"
python-dateutil = "2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.3"
pytest-asyncio = "0.19.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
