[project]
authors = [{name = "Band Protocol"}]
license = {text = "MIT"}
requires-python = "<4.0,>=3.7"
dependencies = [
  "bech32==1.2.0",
  "betterproto==2.0.0b7",
  "bip32==0.0.8",
  "ecdsa==0.19.0",
  "grpclib==0.4.3",
  "ledgerblue<1.0.0,>=0.1.54",
  "mnemonic==0.19",
  "python-dateutil==2.8.2"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
description = "Python library for BandChain"
keywords = ["BAND", "BLOCKCHAIN", "ORACLE"]
name = "pyband"
readme = "README.md"
version = "0.4.0-rc2"

[project.urls]
homepage = "https://bandprotocol.com/"
repository = "https://github.com/bandprotocol/pyband"
documentation = "https://docs.bandchain.org/client-library/pyband/getting-started.html"

[dependency-groups]
dev = ["pytest==7.1.3", "pytest-asyncio==0.19.0"]

[tool.ruff]
line-length = 99
